GNOME Bugzilla – Bug 696301
[WK2] Reload/stop button is not in sync with the load
Last modified: 2013-03-21 17:17:02 UTC
We basically never ported this.
Created attachment 239477 [details] [review] reload-stop.diff
Review of attachment 239477 [details] [review]: oops, it seems I missed that. Patch looks good to me, thanks! ::: src/ephy-window.c @@ +2757,3 @@ sync_tab_document_type (view, NULL, window); +#ifdef HAVE_WEBKIT2 + sync_tab_load_status (ephy_embed_get_web_view (embed), WEBKIT_LOAD_STARTED, window); I guess you can use the view here directly instead of ephy_embed_get_web_view (embed)
Thanks, pushed with that change to master and gnome-3-8.