ephy-window: connect the reload/stop button the load status

We were not doing it at all in WebKit2.

https://bugzilla.gnome.org/show_bug.cgi?id=696301